--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -46,7 +46,7 @@
 	<a href="#" class="close">&times;</a>
 </div>
 <div class="row full-width">
-	<div class="small-10 column without-padding">
+	<div class="small-12 column without-padding medium-10">
 		<div n:if="$presenter->name != Login" class="hide-for-small small-12 ">
 			{control breadcrumbs}
 		</div>
@@ -67,7 +67,7 @@
 
 
 
-	<div class="small-2 column without-padding">
+	<div class="hide-for-small medium-2 column without-padding">
 		<div n:if="$presenter->name != Login">
 			{block chat}
 				{control chat}
