little css fixes

--- a/app/presenters/templates/Settings/default.latte
+++ b/app/presenters/templates/Settings/default.latte
@@ -129,7 +129,9 @@
 				</tbody>
 			</table>
 		{else}
-			<p>Nenalezeny žádné školní roky</p>
+			<div class="panel">
+				Nenalezeny žádné školní roky
+			</div>
 		{/if}
 	{/if}
 
