--- a/scss/app.scss
+++ b/scss/app.scss
@@ -61,7 +61,7 @@ body {
       border-bottom: 1px solid white;
 
       .status {
-        margin-top: 5px;
+        font-size: 20px;
         color: grey;
       }
 
