--- a/scss/app.scss
+++ b/scss/app.scss
@@ -164,3 +164,49 @@ hr.white {
     padding-right:$chat-width;
   }
 }
+
+#chat-popups {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding-right: 200px;
+  height: 280px;
+
+  .chat-popup {
+    width: 250px;
+    height: 280px;
+    margin-right: 20px;
+
+    .chat-header {
+      font-size: 12px;
+      font-weight: bold;
+      height: 30px;
+      background: $dark-grey;
+      padding: 5px 10px;
+      color: white;
+    }
+
+    .chat-header.minimize {
+      position:fixed;
+      bottom:0;
+      width: 250px;
+    }
+
+    .chat-text {
+      height: 220px;
+      background: white;
+      border-left: 1px solid lightgray;
+      border-right: 1px solid lightgray;
+    }
+
+    input {
+      height: 30px;
+    }
+
+  }
+
+}
+
+.cursor-pointer {
+  cursor:pointer;
+}
